--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: Vincent Hwang
-description: I'm tring to use github page for my personal website, any suggestions are welcome!
+description: Personal website
